# textual

./: .coveragerc  .deepsource.toml  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  Makefile  README.md  README.zh.md  docs.md  faq.yml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  hatch.toml  index.html  mkdocs-common.yml  mkdocs-local.yml  mkdocs-nav.yml  mkdocs-offline.yml  mkdocs-online.yml  mkdocs.yml  mypy.ini  mypy.txt  objects.inv  offset.css  pyproject.toml  rich-tui.code-workspace  robots.txt  sitemap.xml  visual.py  your_test_file.py
.faq/: FAQ.md  suggest.md
.github/: PULL_REQUEST_TEMPLATE.md  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  task.md
.github/workflows/: black_format.yml  codeql.yml  comment.yml  lint_python.yml  new_issue.yml  pr-quality.yaml  pre-commit.yml  pythonpackage.yml
FAQ/: index.html
api/: index.html
api/app/: index.html
api/await_complete/: index.html
api/await_remove/: index.html
api/binding/: index.html
api/button/: index.html
api/cache/: index.html
api/checkbox/: index.html
api/color/: index.html
api/command/: index.html
api/compose/: index.html
api/constants/: index.html
api/containers/: index.html
api/content/: index.html
api/content_switcher/: index.html
api/coordinate/: index.html
api/data_table/: index.html
api/directory_tree/: index.html
api/dom_node/: index.html
api/errors/: index.html
api/events/: index.html
api/filter/: index.html
api/footer/: index.html
api/fuzzy_matcher/: index.html
api/geometry/: index.html
api/getters/: index.html
api/header/: index.html
api/highlight/: index.html
api/input/: index.html
api/label/: index.html
api/layout/: index.html
api/lazy/: index.html
api/list_item/: index.html
api/list_view/: index.html
api/loading_indicator/: index.html
api/logger/: index.html
api/logging/: index.html
api/map_geometry/: index.html
api/markdown/: index.html
api/markdown_viewer/: index.html
api/markup/: index.html
api/message/: index.html
api/message_pump/: index.html
api/on/: index.html
api/option_list/: index.html
api/pilot/: index.html
api/placeholder/: index.html
api/query/: index.html
api/radiobutton/: index.html
api/radioset/: index.html
api/reactive/: index.html
assets/: _mkdocstrings.css
blog/: index.html
changelog.d/: +nmay231-misc-fix.fixed.md  2860.changed.md  2979.added.md  42.fixed.md  changelog_template.jinja
css_types/: index.html
custom_theme/: main.html
docs/: CNAME  FAQ.md  README.md  color_system.md  getting_started.md  help.md  index.md  introduction.md  linux-console.md  messages.md  roadmap.md  robots.txt  tutorial.md  using-and-customizing-default-css.md  widget_gallery.md
e2e_tests/: sandbox_basic_test.py
events/: index.html
examples/: README.md  advanced_palette.py  animation.py  basic.css  basic.py  big_table.py  borders.css  borders.py  breakpoints.py  calculator.css  calculator.py  calculator.tcss  cent.py  clock.py  code_browser.css  code_browser.py  code_browser.tcss  code_browser_with_command_palette.py  code_viewer.py  color_command.py  colours.txt  demo.md  dev_sandbox.css  dev_sandbox.py  dev_sandbox.scss  dictionary.css  dictionary.py  dictionary.tcss  dynamic_bindings.py  easing.py  example.css  example.md  five_by_five.css  five_by_five.md  five_by_five.py  five_by_five.tcss  food.json  grid.py  grid_auto.py  json_tree.py  (+20 more)
getting_started/: index.html
guide/: index.html
help/: index.html
how-to/: index.html
linux-console/: index.html
notes/: README.md  layout.md  refresh.md  snapshot_testing.md
old examples/: README.md  animation.py  easing.py  example.css  simple.py  theme.css
old_examples/: borders.css  code_viewer.py
questions/: README.md  align-center-middle.question.md  app-transparent-background.question.md  compose-result.question.md  copy-text.question.md  datatable-doesnt-scroll.question.md  images.question.md  issues-with-ide-terminal.question.md  no-widget-called-textlog.question.md  pass-args-to-app.question.md  transparent-background.question.md  why-do-some-keys-not-make-it-to-my-app.question.md  why-looks-bad-on-macos.question.md  why-no-ansi-themes.question.md  worker-thread-error.question.md
reference/: README.md  _color_system.md  _devtools.md  box.monopic  index.html  spacing.monopic
roadmap/: index.html
sandbox/: README.md  align.css  align.py  auto_test.css  auto_test.py  basic.css  basic.py  borders.py  buttons.css  buttons.py  color_names.py  dev_sandbox.py  dev_sandbox.scss  fifty.py  file_search.py  file_search.scss  focus_keybindings.py  horizontal.css  horizontal.py  hsl.py  hsl.scss  input.py  input.scss  local_styles.css  local_styles.py  nest.css  nest.py  scroll_to_widget.py  scroll_view.py  simplest.py  table.py  tabs.py  tabs.scss  uber.css  uber.py  vertical.css  vertical.py  vertical_container.py
search/: search_index.json
styles/: index.html
stylesheets/: custom.css
tests/: conftest.py  deadlock.py  test_actions.py  test_animation.py  test_animator.py  test_ansi_truecolor_filter.py  test_app.py  test_app_focus_blur.py  test_arrange.py  test_auto_pilot.py  test_auto_refresh.py  test_auto_scroll.py  test_await_remove.py  test_bidi.py  test_binary_encode.py  test_binding.py  test_binding_inheritance.py  test_border.py  test_border_subtitle.py  test_box_drawing.py  test_box_model.py  test_cache.py  test_call_later.py  test_call_x_schedulers.py  test_case.py  test_collapsible.py  test_collections.py  test_color.py  test_combo_box.py  test_command.py  test_compositor.py  test_compositor_regions_to_spans.py  test_concurrency.py  test_config.py  test_constants.py  test_containers.py  test_content.py  test_content_switcher.py  test_count_parameters.py  test_css_parse.py  (+139 more)
tools/: collect_highlights.py  gen_easings_tests.ts  sandbox_e2e_smoke_test.py  widget_documentation.py
tutorial/: index.html
widget_gallery/: index.html
widgets/: index.html
(+2689 files in other folders)
