[project]
name = "textual"
version = "2.1.0"
description = "Modern Text User Interface framework"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Will McGugan", email = "will@textualize.io" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "markdown-it-py[plugins,linkify]>=2.1.0",
    "rich>=13.3.3",
    "typing-extensions>=4.4.0,<5",
    "platformdirs>=3.6.0,<5",
]
requires-python = ">=3.8.1"

[project.optional-dependencies]
syntax = [
    "tree-sitter>=0.23.0; python_version >= '3.9'",
    "tree-sitter-python>=0.23.0; python_version >= '3.9'",
    "tree-sitter-markdown>=0.3.0; python_version >= '3.9'",
    "tree-sitter-json>=0.24.0; python_version >= '3.9'",
    "tree-sitter-toml>=0.6.0; python_version >= '3.9'",
    "tree-sitter-yaml>=0.6.0; python_version >= '3.9'",
    "tree-sitter-html>=0.23.0; python_version >= '3.9'",
    "tree-sitter-css>=0.23.0; python_version >= '3.9'",
    "tree-sitter-javascript>=0.23.0; python_version >= '3.9'",
    "tree-sitter-rust>=0.23.0; python_version >= '3.9'",
    "tree-sitter-go>=0.23.0; python_version >= '3.9'",
    "tree-sitter-regex>=0.24.0; python_version >= '3.9'",
    "tree-sitter-xml>=0.7.0; python_version >= '3.9'",
    "tree-sitter-sql>=0.3.0,<0.3.8; python_version >= '3.9'",
    "tree-sitter-java>=0.23.0; python_version >= '3.9'",
    "tree-sitter-bash>=0.23.0; python_version >= '3.9'",
]

[project.urls]
Homepage = "https://github.com/Textualize/textual"
Repository = "https://github.com/Textualize/textual"
Documentation = "https://textual.textualize.io/"
"Bug Tracker" = "https://github.com/Textualize/textual/issues"

[build-system]
requires = ["poetry-core>=1.2.0"]  # Keep poetry as the primary build tool
build-backend = "poetry.core.masonry.api"

[tool.ruff] # Moved ruff config up to be accessible by both
target-version = "py38"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "syntax: marks tests that require syntax highlighting (deselect with '-m \"not syntax\"')",
]
asyncio_default_fixture_loop_scope = "function"
