[project]
name = "textual"
version = "3.3.0"
homepage = "https://github.com/Textualize/textual"
repository = "https://github.com/Textualize/textual"
documentation = "https://textual.textualize.io/"

description = "Modern Text User Interface framework"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Will McGugan", email = "will@textualize.io" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "markdown-it-py[plugins,linkify]>=2.1.0",
    "rich>=13.3.3",
    "typing-extensions>=4.4.0,<5",
    "platformdirs>=3.6.0,<5",
]
requires-python = ">=3.8.1,<4.0.0"

[project.optional-dependencies]
syntax = [
    "tree-sitter>=0.23.0; python_version >= '3.9'",
    "tree-sitter-python>=0.23.0; python_version >= '3.9'",
    "tree-sitter-markdown>=0.3.0; python_version >= '3.9'",
    "tree-sitter-json>=0.24.0; python_version >= '3.9'",
    "tree-sitter-toml>=0.6.0; python_version >= '3.9'",
    "tree-sitter-yaml>=0.6.0; python_version >= '3.9'",
    "tree-sitter-html>=0.23.0; python_version >= '3.9'",
    "tree-sitter-css>=0.23.0; python_version >= '3.9'",
    "tree-sitter-javascript>=0.23.0; python_version >= '3.9'",
    "tree-sitter-rust>=0.23.0; python_version >= '3.9'",
    "tree-sitter-go>=0.23.0; python_version >= '3.9'",
    "tree-sitter-regex>=0.24.0; python_version >= '3.9'",
    "tree-sitter-xml>=0.7.0; python_version >= '3.9'",
    "tree-sitter-sql>=0.3.0,<0.3.8; python_version >= '3.9'",
    "tree-sitter-java>=0.23.0; python_version >= '3.9'",
    "tree-sitter-bash>=0.23.0; python_version >= '3.9'",
]
dev = [
    "black==24.4.2",
    "griffe==0.32.3",
    "httpx>=0.23.1,<1",
    "mkdocs>=1.3.0,<2",
    "mkdocs-exclude>=1.0.2,<2",
    "mkdocs-git-revision-date-localized-plugin>=1.2.5,<2",
    "mkdocs-material>=9.0.11,<10",
    "mkdocs-rss-plugin>=1.5.0,<2",
    "mkdocstrings[python]>=0.20.0,<1",
    "mkdocstrings-python>=1.0.0,<2",
    "mypy>=1.0.0,<2",
    "pre-commit>=2.13.0,<3",
    "pytest>=8.3.1,<9",
    "pytest-xdist>=3.6.1,<4",
    "pytest-asyncio",
    "pytest-cov>=5.0.0,<6",
    "textual-dev>=1.7.0,<2",
    "types-setuptools>=67.2.0.1,<68",
    "isort>=5.13.2,<6",
    "pytest-textual-snapshot>=1.0.0,<2",
]

[project.urls]
Homepage = "https://github.com/Textualize/textual"
Repository = "https://github.com/Textualize/textual"
Documentation = "https://textual.textualize.io/"
"Bug Tracker" = "https://github.com/Textualize/textual/issues"

[build-system]
requires = ["poetry-core>=1.2.0"]  # Keep poetry as the primary build tool
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = [
    "src/textual/py.typed",
    { path = "docs/examples", format = "sdist" },
    { path = "tests", format = "sdist" },
    # The reason for the slightly convoluted path specification here is that
    # poetry populates the exclude list with the content of .gitignore, and
    # it also seems like exclude trumps include. So here we specify that we
    # want to package up the content of the docs-offline directory in a way
    # that works around that.
    { path = "docs-offline/**/*", format = "sdist" },
]

[tool.ruff] # Moved ruff config up to be accessible by both
target-version = "py38"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "syntax: marks tests that require syntax highlighting (deselect with '-m \"not syntax\"')",
]
asyncio_default_fixture_loop_scope = "function"
